manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-homework
  labels:
    app: kubernetes-homework
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubernetes-homework
  template:
    metadata:
      labels:
        app: kubernetes-homework
    spec:
      containers:
        - name: kubernetes-homework
          image: imalouhov/kubernetes-homework:0.0.1
          ports:
            - containerPort: 8080
