manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-homework
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: kubernetes-homework
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000
